--- a/Clase 3/index.html
+++ b/Clase 3/index.html
@@ -1,23 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
     <link rel="stylesheet" href="estilo.css">
-<head>
+    <script src="https://kit.fontawesome.com/8be83dad8d.js" crossorigin="anonymous"></script>
+</head>
 <body>
     <main class="container">
-        <header>
+        <header class="cabecera">
             <figure class="contenedor_foto_perfil">
-                <img src="./img/perfil.png" alt="foto de perfil">
+                <img src="./img/darwin.png" alt="foto de perfil">
             </figure>
-            <section>
-                <h1>Nicolas Quinteros Rodriguez</h1>
-                <h2>Analista Programador</h2>
+            <section class="nombre_puesto">
+                <h1> Nicolas Quinteros Rodriguez</h1>
+                <h2> Analista Programador</h2>
             </section>
-        <header>   
-    </main>
-</body>
+        </header>
+        <section>
+            <h3>Perfil Profesional</h3>
+            <hr>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et necessitatibus asperiores impedit, animi in aspernatur! Aspernatur impedit eum repellendus odit voluptatem quidem ullam numquam? Facilis iusto quis magnam est odit?</p>
+        </section>
+        <section>
+            <h3><i class="fas fa-cogs"></i> Habilidades</h3>
+            <hr>
+            <ul>
+                <li>Trabajo en Equipo</li>
+                <li>Gestion de Proyectos</li>
+                <li>Liderazgo</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-language"></i> Idiomas</h3>
+            <hr>
+            <ul>
+                <li>Español</li>
+                <li>Ingles</li>
+                <li>Chino</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-envelope"></i> Informacion de Contacto</h3>
+            <hr>
+            <address>
+                <p>Email: nicoquir192@gmail.com</p>
+                <p>Telefono: +569 87654321</p>
+                <p>Ig: nick.relax57</p>
+            </address>
+        </section>
+        <section>
+            <h3><i class="fas fa-briefcase"></i> Experiencia Laboral</h3>
+            <hr>
+            <article>
+                <h4>Caja Vecina</h4>
+                <p><strong>Peluqueria Flor</strong> (2023-2023)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
+        
+        <section>
+            <h3><i class="fas fa-graduation-cap"></i> Formación</h3>
+            <hr>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2002-2006)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2007-2008)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
 
-<html>
+    </main>
+    
+</body>
+</html>
