--- a/Clase 3/index.html
+++ b/Clase 3/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <header class="cabecera">
             <figure class="contenedor_foto_perfil">
-                <img src="./img/darwin.png" alt="foto de perfil">
+                <img src="./img/WhatsApp Image 2025-04-04 at 15.09.16.jpeg" alt="foto de perfil">
             </figure>
             <section class="nombre_puesto">
                 <h1> Nicolas Quinteros Rodriguez</h1>
@@ -21,7 +21,7 @@
         <section>
             <h3>Perfil Profesional</h3>
             <hr>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et necessitatibus asperiores impedit, animi in aspernatur! Aspernatur impedit eum repellendus odit voluptatem quidem ullam numquam? Facilis iusto quis magnam est odit?</p>
+            <p> Profesional con 1 año de experiencia en el sector de Analista Programador, especializado/a en [tu especialización o habilidades clave]. Me caracterizo por [tus principales fortalezas: creatividad, resolución de problemas, enfoque en resultados, liderazgo, etc.].</p>
         </section>
         <section>
             <h3><i class="fas fa-cogs"></i> Habilidades</h3>
@@ -38,7 +38,6 @@
             <ul>
                 <li>Español</li>
                 <li>Ingles</li>
-                <li>Chino</li>
             </ul>
         </section>
         <section>
@@ -47,7 +46,7 @@
             <address>
                 <p>Email: nicoquir192@gmail.com</p>
                 <p>Telefono: +569 87654321</p>
-                <p>Ig: nick.relax57</p>
+                <p>Instagram: nick.relax57</p>
             </address>
         </section>
         <section>
